--- a/drama.html
+++ b/drama.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Github class - Continue</title>
+    <title>Drama Page - Fowosere</title>
   </head>
   <body>
-    <h1 style="color: green; text-align: center">Fowosere Enterprise</h1>
+    <h1 style="color: green; text-align: center">Fowosere Drama Page</h1>
 <hr>
     <ul
       style="
@@ -16,7 +16,8 @@
         list-style-type: none;
       "
     >
-    <li><a href="index.html">Home</a></li>
+
+      <li><a href="index.html">Home</a></li>
       <li><a href="">Coding</a></li>
       <li><a href="">Music</a></li>
       <li><a href="drama.html">Drama</a></li>
@@ -29,7 +30,7 @@
     >
     <hr />
     <div style="height: 50vh">
-      <h2 align="center">More details about us</h2>
+      <h2 align="center">Our Drama are Wonderful you Know</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi odio
         dignissimos tempore. Animi aliquid fugiat deleniti necessitatibus
@@ -38,21 +39,7 @@
         <hr />
       </p>
       <br />
-      <h3>Another Details</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi odio
-        dignissimos tempore. Animi aliquid fugiat deleniti necessitatibus
-        officia, magni perspiciatis? Quas, consequuntur. Possimus, a? Labore
-        deleniti a quas architecto perspiciatis.
-      </p>
-      <br />
-      <h3 >Another Details</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi odio
-        dignissimos tempore. Animi aliquid fugiat deleniti necessitatibus
-        officia, magni perspiciatis? Quas, consequuntur. Possimus, a? Labore
-        deleniti a quas architecto perspiciatis.
-      </p>
+     
     </div>
     <footer style="margin-top: 60px">
       <hr />
